kubernetes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 3306
      targetPort: 3306
      protocol: TCP
